unpackaged/objects/Integration_Market_Country_Mapping__c.object
<CustomObject>
  <description>Used to capture the mapping between Movex# prefix and the Market &amp; Country to assign the Movex Accounts to.</description>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AD</fullName>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BY</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CN</fullName>
        </value>
        <value>
          <fullName>CS</fullName>
        </value>
        <value>
          <fullName>CY</fullName>
        </value>
        <value>
          <fullName>CZ</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>EE</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>GR</fullName>
        </value>
        <value>
          <fullName>HK</fullName>
        </value>
        <value>
          <fullName>HR</fullName>
        </value>
        <value>
          <fullName>HU</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IS</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KZ</fullName>
        </value>
        <value>
          <fullName>LT</fullName>
        </value>
        <value>
          <fullName>LU</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_Group_Exception__c</fullName>
    <description>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</description>
    <inlineHelpText>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</inlineHelpText>
    <label>Customer Group Exception</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>Asia</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BeNeLux</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>CEE</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CN</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>IB</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>NA</fullName>
        </value>
        <value>
          <fullName>Nordics</fullName>
        </value>
        <value>
          <fullName>PL</fullName>
        </value>
        <value>
          <fullName>RU</fullName>
        </value>
        <value>
          <fullName>TR</fullName>
        </value>
        <value>
          <fullName>TW</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>ZA</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Movex_Prefix__c</fullName>
    <label>Movex # Prefix</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AD</fullName>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>ATX</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BG00</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CN</fullName>
        </value>
        <value>
          <fullName>CS</fullName>
        </value>
        <value>
          <fullName>CY</fullName>
        </value>
        <value>
          <fullName>CZ00</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>EE</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>GB</fullName>
        </value>
        <value>
          <fullName>GR</fullName>
        </value>
        <value>
          <fullName>HK</fullName>
        </value>
        <value>
          <fullName>HR00</fullName>
        </value>
        <value>
          <fullName>HU00</fullName>
        </value>
        <value>
          <fullName>IE</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IS</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>SSIS: Market &amp; Country Mapping</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Customer_Group_Exception__c</columns>
    <columns>Market__c</columns>
    <columns>Movex_Prefix__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Integration: Market &amp; Country Mapping Na</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SSIS: Market &amp; Country Mappings</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>